[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Arts/MainMenuLeftBar.png" type="Texture" id=1]
[ext_resource path="res://Resources/Themes/Default.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Core/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Resources/Sounds/SFX/UI/UI_Quirky.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Sounds/SFX/UI/UI_Select.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Arts/Circle.png" type="Texture" id=6]
[ext_resource path="res://Resources/Arts/Title.png" type="Texture" id=7]

[sub_resource type="Animation" id=11]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.133333, 0.133333, 0.133333, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "CircleClick"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground/Circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonBackground/Circle:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1.07177, 0.517633, 0.267944 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.658824, 0.658824, 0.658824, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.133333, 0.133333, 0.133333, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "CircleClick"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground/Circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonBackground/Circle:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1.07177, 0.517633, 0.267944 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.658824, 0.658824, 0.658824, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.37, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.133333, 0.133333, 0.133333, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "CircleClick"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonBackground/Circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonBackground/Circle:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1.07177, 0.517633, 0.267944 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.658824, 0.658824, 0.658824, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.5, 0.136024 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackTransition:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.929412, 0.929412, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Side Bar" type="Sprite" parent="."]
position = Vector2( 150, 540 )
texture = ExtResource( 1 )

[node name="Left Bar Container" type="VBoxContainer" parent="Left Side Bar"]
anchor_left = 0.047
anchor_top = 0.037
anchor_right = 0.953
anchor_bottom = 0.97
margin_left = -150.1
margin_top = -539.96
margin_right = -149.9
margin_bottom = -539.6
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Left Side Bar/Left Bar Container"]
margin_top = 883.0
margin_right = 272.0
margin_bottom = 922.0
rect_min_size = Vector2( 136, 24 )
text = "Новая игра"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="ProgressBar" parent="Left Side Bar/Left Bar Container/StartButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="Sprite" parent="Left Side Bar/Left Bar Container/StartButton/ButtonBackground"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 6 )

[node name="Animations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/StartButton"]
anims/Hover = SubResource( 11 )

[node name="CircleAnimations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/StartButton"]
anims/CircleClick = SubResource( 12 )

[node name="Tween" type="Tween" parent="Left Side Bar/Left Bar Container/StartButton"]

[node name="OptionsButton" type="Button" parent="Left Side Bar/Left Bar Container"]
margin_top = 926.0
margin_right = 272.0
margin_bottom = 965.0
rect_min_size = Vector2( 136, 24 )
text = "Настройки"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="ProgressBar" parent="Left Side Bar/Left Bar Container/OptionsButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="Sprite" parent="Left Side Bar/Left Bar Container/OptionsButton/ButtonBackground"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 6 )

[node name="Animations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/OptionsButton"]
anims/Hover = SubResource( 13 )

[node name="CircleAnimations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/OptionsButton"]
anims/CircleClick = SubResource( 14 )

[node name="Tween" type="Tween" parent="Left Side Bar/Left Bar Container/OptionsButton"]

[node name="QuitButton" type="Button" parent="Left Side Bar/Left Bar Container"]
margin_top = 969.0
margin_right = 272.0
margin_bottom = 1008.0
rect_min_size = Vector2( 136, 24 )
text = "Выйти"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="ProgressBar" parent="Left Side Bar/Left Bar Container/QuitButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="Sprite" parent="Left Side Bar/Left Bar Container/QuitButton/ButtonBackground"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 6 )

[node name="Animations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/QuitButton"]
anims/Hover = SubResource( 2 )

[node name="CircleAnimations" type="AnimationPlayer" parent="Left Side Bar/Left Bar Container/QuitButton"]
anims/CircleClick = SubResource( 5 )

[node name="Tween" type="Tween" parent="Left Side Bar/Left Bar Container/QuitButton"]

[node name="ButtonClickSFX" type="AudioStreamPlayer" parent="Left Side Bar/Left Bar Container"]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"

[node name="UISelectSFX" type="AudioStreamPlayer" parent="Left Side Bar/Left Bar Container"]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "SFX"

[node name="About" type="Label" parent="Left Side Bar"]
anchor_top = 0.012
anchor_right = 1.0
anchor_bottom = 0.081
margin_left = -150.0
margin_top = -539.96
margin_right = -150.0
margin_bottom = -540.48
text = "Сделано специально для джема
Godot Russia"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.156
anchor_right = 1.0
anchor_bottom = 0.219
margin_left = 0.47998
margin_bottom = -0.52002
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackTransition" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 10 )

[connection signal="pressed" from="Left Side Bar/Left Bar Container/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Left Side Bar/Left Bar Container/QuitButton" to="." method="_on_QuitButton_pressed"]
